tests/ui/unstable-feature-bound/unstable-feature-cross-crate-require-bound.fail.stderr
error[E0658]: use of unstable library feature `feat_bar`
  --> $DIR/unstable-feature-cross-crate-require-bound.rs:12:5
   |
LL |     Bar::foo();
   |     ^^^
   |
   = help: add `#![feature(feat_bar)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `Bar` to implement `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
